chore: add swagger documentation of CreateTransaction and future feature GetTransactionByAccountId
