# go-api/docs/swagger.yaml
@@ -29,6 +29,72 @@ definitions:
     required:
     - account_id
     type: object
+  dto.CreateTransactionRequest:
+    properties:
+      account_id:
+        description: |-
+          @Description The account's ID for which the transaction will be performed.
+          @Example e7b40123-cb12-41fa-b5bc-5a128448027e
+        type: string
+      amount_cents:
+        description: |-
+          @Description The transaction amount in cents. Must be a positive integer.
+          @Example 10000
+        type: integer
+      card_token:
+        description: |-
+          @Description The credit card token (optional for some transaction types like DEPOSIT).
+          @Example 16ecac04-9e45-4a5b-b7d4-d6c1c66bafd6
+        maxLength: 126
+        minLength: 20
+        type: string
+      type:
+        description: |-
+          @Description The type of transaction. Valid options are: DEPOSIT, PURCHASE, REFUND, CHARGE.
+          @Example PURCHASE
+        enum:
+        - DEPOSIT
+        - PURCHASE
+        - REFUND
+        - CHARGE
+        type: string
+    required:
+    - account_id
+    - amount_cents
+    - type
+    type: object
+  dto.ResponseCreateTransactionRequest:
+    properties:
+      account_id:
+        description: |-
+          @Description The ID of the account associated with the transaction.
+          @Example e7b40123-cb12-41fa-b5bc-5a128448027e
+        type: string
+      amount_cents:
+        description: |-
+          @Description The transaction amount in cents.
+          @Example 10000
+        type: integer
+      card_id:
+        description: |-
+          @Description The ID of the credit card used for the transaction. It will be null if no card was associated with the transaction.
+          @Example 16ecac04-9e45-4a5b-b7d4-d6c1c66bafd6
+        type: string
+      type:
+        description: |-
+          @Description The type of the transaction.
+          @Example PURCHASE
+        enum:
+        - DEPOSIT
+        - PURCHASE
+        - REFUND
+        - CHARGE
+        type: string
+    required:
+    - account_id
+    - amount_cents
+    - type
+    type: object
   models.Account:
     properties:
       created_at:
@@ -198,6 +264,61 @@ paths:
       summary: Get all cards by account ID
       tags:
       - cards
+  /transactions:
+    post:
+      consumes:
+      - application/json
+      description: Creates a new transaction in the payment gateway.
+      parameters:
+      - description: Transaction data
+        in: body
+        name: transaction
+        required: true
+        schema:
+          $ref: '#/definitions/dto.CreateTransactionRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/dto.ResponseCreateTransactionRequest'
+        "400":
+          description: Invalid request
+          schema:
+            $ref: '#/definitions/api.APIError'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/api.APIError'
+      summary: Create a new transaction
+  /transactions/{accountId}:
+    get:
+      consumes:
+      - application/json
+      description: Returns a list of transactions for a specific account.
+      parameters:
+      - description: Account ID
+        in: path
+        name: accountId
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/dto.ResponseCreateTransactionRequest'
+            type: array
+        "404":
+          description: Account not found
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/api.APIError'
+      summary: Get transactions by Account ID
 schemes:
 - http
 swagger: "2.0"
